src/test/resources/parse/accept/singleLowercaseId.ul
int a ()
{
}

void b ()
{
}

float c ()
{
}
