src/test/resources/parse/reject/invalidOperatorUnderscore.ul
void bar ()
{
    1 _ 1;
}
